--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,6 @@
 *.ifcxml filter=lfs diff=lfs merge=lfs -text
 *.las filter=lfs diff=lfs merge=lfs -text
 *.ttl filter=lfs diff=lfs merge=lfs -text
+*.sp filter=lfs diff=lfs merge=lfs -text
+*.pp filter=lfs diff=lfs merge=lfs -text
+*.dwg filter=lfs diff=lfs merge=lfs -text
