--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,6 @@
 *.sp filter=lfs diff=lfs merge=lfs -text
 *.pp filter=lfs diff=lfs merge=lfs -text
 *.dwg filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.rar filter=lfs diff=lfs merge=lfs -text
